--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
     }
 .jumbotron {
   background-color: white;
-  background-image: url('../images/seaice.jpg');
+  background-image: url('../images/seaice1.jpg');
     background-size: 100% 100%;
     text-align: center;
     min-height: 200px;
