--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
   
   body, html {
     padding: 10px 0px;
-    background-color: #9d9ea0;
+    background-color: #9cb9f3;
     }
 .jumbotron {
   background-color: white;
