--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,9 @@
   background-image: url('../images/seaice.jpg');
     background-size: 100% 100%;
     text-align: center;
+    font-family: fantasy;
+    outline-style: solid;
+    color: rgb(240, 10, 163);
     min-height: 200px;
   }
  
