--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,7 @@
 
   
   body, html {
-    padding: 10px 0px;
-    background-color: #9cb9f3;
+    color: #9cb9f3;
     }
 .jumbotron {
   background-color: white;
