--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@
     text-align: center;
     font-family: fantasy;
     outline-style: solid;
-    color: rgb(10, 205, 240);
+    color: rgb(213, 10, 240);
     min-height: 200px;
   }
  
@@ -18,7 +18,7 @@
   background-color: #200957;
   color: white;
   padding: 16px;
-  font-size: 16px;
+  font-size: 80%;
   border: none;
 }
 
